improve contact endpoints
